Ignore all pycache files from being pushed to git.

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,6 @@ virtual
 .vscode
 /__pycache__/
 start.sh
+WBBackend/migrations/__pycache__/
+WBBackend/__pycache__/
+WBCarPoolApp/__pycache__/settings.cpython-36.pyc
