--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,8 @@
+*__pycache__
+*pyc
 venv
 virtual
 .env
 .idea
 .vscode
-/__pycache__/
 start.sh
-WBBackend/migrations/__pycache__/
-WBBackend/__pycache__/
-WBCarPoolApp/__pycache__/settings.cpython-36.pyc
