add migrations to git ignore

--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,7 @@ virtual
 .idea
 .vscode
 start.sh
+WBBackend/migrations/
 WBBackend/migrations/__pycache__/
 WBBackend/__pycache__/
 WBCarPoolApp/__pycache__/settings.cpython-36.pyc
