--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,12 @@
-apturl==0.5.2
+appdirs==1.4.3
 asn1crypto==0.24.0
+attrs==19.3.0
+black==19.10b0
 blinker==1.4
 Brlapi==0.6.7
 certifi==2019.11.28
 chardet==3.0.4
+Click==7.0
 command-not-found==0.3
 coreapi==2.3.3
 coreschema==0.0.4
@@ -24,6 +27,7 @@ django-uuidfield==0.5.0
 djangorestframework==3.10.3
 entrypoints==0.3
 fcm-django==0.3.2
+gunicorn==20.0.4
 httplib2==0.11.3
 idna==2.8
 itypes==1.1.0
@@ -42,6 +46,7 @@ MarkupSafe==1.1.1
 netifaces==0.10.4
 oauthlib==3.1.0
 olefile==0.46
+pathspec==0.6.0
 pexpect==4.6.0
 Pillow==6.2.1
 protobuf==3.6.1
@@ -64,6 +69,7 @@ python3-openid==3.1.0
 pytz==2019.3
 pyxdg==0.25
 PyYAML==3.13
+regex==2019.12.9
 reportlab==3.5.18
 requests==2.22.0
 requests-oauthlib==1.3.0
@@ -75,6 +81,8 @@ six==1.13.0
 sqlparse==0.3.0
 system-service==0.3
 systemd-python==234
+toml==0.10.0
+typed-ast==1.4.0
 ubuntu-advantage-tools==19.2
 ubuntu-drivers-common==0.0.0
 ufw==0.36
