--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
 appdirs==1.4.3
+apturl==0.5.2
 asn1crypto==0.24.0
 attrs==19.3.0
 black==19.10b0
 blinker==1.4
-Brlapi==0.6.7
 certifi==2019.11.28
 chardet==3.0.4
 Click==7.0
