--- a/requirements.txt
+++ b/requirements.txt
@@ -1,24 +1,9 @@
-appdirs==1.4.3
-apturl==0.5.2
-asn1crypto==0.24.0
-attrs==19.3.0
-beautifulsoup4==4.8.1
-black==19.10b0
-blinker==1.4
-Brlapi==0.6.7
-bs4==0.0.1
+gunicorn==20.0.4
 certifi==2019.11.28
 chardet==3.0.4
-Click==7.0
-command-not-found==0.3
 coreapi==2.3.3
 coreschema==0.0.4
-cryptography==2.3
-cupshelpers==1.0
-defer==1.0.6
 defusedxml==0.6.0
-distro==1.3.0
-distro-info===0.21ubuntu2
 dj-config-url==0.1.1
 dj-database-url==0.5.0
 Django==2.2.5
@@ -28,79 +13,25 @@ django-filter==2.2.0
 django-rest-auth==0.9.5
 django-uuidfield==0.5.0
 djangorestframework==3.10.3
-drf-yasg==1.17.0
-entrypoints==0.3
 fcm-django==0.3.2
-gunicorn==20.0.4
-httplib2==0.11.3
 idna==2.8
-inflection==0.3.1
 itypes==1.1.0
 Jinja2==2.10.3
-keyring==17.1.1
-keyrings.alt==3.1.1
-language-selector==0.1
-launchpadlib==1.10.6
-lazr.restfulclient==0.14.2
-lazr.uri==1.0.3
-louis==3.8.0
-macaroonbakery==1.2.1
-Mako==1.0.7
 Markdown==3.1.1
 MarkupSafe==1.1.1
-netifaces==0.10.4
 oauthlib==3.1.0
-olefile==0.46
-packaging==19.2
-pathspec==0.6.0
-pexpect==4.6.0
 Pillow==6.2.1
-protobuf==3.6.1
-psycopg2-binary==2.8.4
-pycairo==1.16.2
-pycrypto==2.6.1
-pycups==1.9.73
+psycopg2==2.8.4
 pyfcm==1.4.7
-PyGObject==3.32.0
-PyJWT==1.7.0
-pymacaroons==0.13.0
-PyNaCl==1.3.0
-pyparsing==2.4.5
-pyRFC3339==1.1
-python-apt==1.8.4
-python-dateutil==2.7.3
-python-debian==0.1.34
 python-decouple==3.3
 python-http-client==3.2.1
 python3-openid==3.1.0
 pytz==2019.3
-pyxdg==0.25
-PyYAML==3.13
-regex==2019.12.9
-reportlab==3.5.18
 requests==2.22.0
 requests-oauthlib==1.3.0
-requests-unixsocket==0.1.5
-ruamel.yaml==0.16.5
-ruamel.yaml.clib==0.2.0
-SecretStorage==2.3.1
 sendgrid==6.1.0
-simplejson==3.16.0
 six==1.13.0
-soupsieve==1.9.5
 sqlparse==0.3.0
-system-service==0.3
-systemd-python==234
-toml==0.10.0
-typed-ast==1.4.0
-ubuntu-advantage-tools==19.2
-ubuntu-drivers-common==0.0.0
-ufw==0.36
-unattended-upgrades==0.1
 uritemplate==3.0.0
 urllib3==1.25.7
-usb-creator==0.3.3
-vboxapi==1.0
-virtualenv==16.7.8
-wadllib==1.3.3
-xkit==0.0.0
+drf-yasg==1.17.0
