--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,3 @@
-gunicorn==20.0.4
 certifi==2019.11.28
 chardet==3.0.4
 coreapi==2.3.3
@@ -13,21 +12,29 @@ django-filter==2.2.0
 django-rest-auth==0.9.5
 django-uuidfield==0.5.0
 djangorestframework==3.10.3
+drf-yasg==1.17.0
 fcm-django==0.3.2
+gunicorn==20.0.4
 idna==2.8
+inflection==0.3.1
 itypes==1.1.0
 Jinja2==2.10.3
 Markdown==3.1.1
 MarkupSafe==1.1.1
 oauthlib==3.1.0
+packaging==19.2
 Pillow==6.2.1
+psycopg2-binary==2.8.4
 pyfcm==1.4.7
+pyparsing==2.4.5
 python-decouple==3.3
 python-http-client==3.2.1
 python3-openid==3.1.0
 pytz==2019.3
 requests==2.22.0
 requests-oauthlib==1.3.0
+ruamel.yaml==0.16.5
+ruamel.yaml.clib==0.2.0
 sendgrid==6.1.0
 six==1.13.0
 sqlparse==0.3.0
