--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,16 @@
 language: python
+
 python:
   - "3.8"
-# command to install dependencies
+
+env:
+  - SECRET_KEY='TEST'
+
+services:
+  - postgresql
+
 install:
   - pip install -r requirements.txt
-# command to run tests
-script: pytest
+  
+script:
+  - python manage.py test
