--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ services:
   - postgresql
 
 install:
-  - pip install -r requirements.txt
-  
+  - pip3 install -r requirements.txt
+
 script:
-  - python manage.py test
+  - python3 manage.py test
