--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,7 @@
+amqp==1.4.9
+anyjson==0.3.3
+billiard==3.3.0.23
+celery==3.1.26.post2
 certifi==2019.11.28
 chardet==3.0.4
 coreapi==2.3.3
@@ -7,8 +11,11 @@ dj-config-url==0.1.1
 dj-database-url==0.5.0
 Django==2.2.5
 django-allauth==0.40.0
+django-ckeditor==5.8.0
 django-fcm==0.1.1
 django-filter==2.2.0
+django-js-asset==1.2.2
+django-kronos==1.0
 django-rest-auth==0.9.5
 django-uuidfield==0.5.0
 djangorestframework==3.10.3
@@ -19,6 +26,7 @@ idna==2.8
 inflection==0.3.1
 itypes==1.1.0
 Jinja2==2.10.3
+kombu==3.0.37
 Markdown==3.1.1
 MarkupSafe==1.1.1
 oauthlib==3.1.0
@@ -27,6 +35,8 @@ Pillow==6.2.1
 psycopg2-binary==2.8.4
 pyfcm==1.4.7
 pyparsing==2.4.5
+python-crontab==2.4.0
+python-dateutil==2.8.1
 python-decouple==3.3
 python-http-client==3.2.1
 python3-openid==3.1.0
