--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ language: python
 
 python:
   - "3.8"
-  
+
 env:
   - DJANGO=2.2.5 DB=postgres
 
@@ -10,4 +10,4 @@ install:
   - pip3 install -r requirements.txt
 
 script:
-  - python manage.py test
+  - python manage.py test WBBackend
