--- a/WBCarPoolApp/.env
+++ b/WBCarPoolApp/.env
@@ -1,7 +1,7 @@
 # Required for all uses
-TWILIO_ACCOUNT_SID='xxxxx'
-TWILIO_API_KEY='xxxxx'
-TWILIO_API_SECRET='xxxxx'
+TWILIO_ACCOUNT_SID='AC427f66dcbdcdbf608d245dbdc15ce8e8'
+TWILIO_API_KEY='SK62024802912ec014cf4e19e52714ad52'
+TWILIO_API_SECRET='YD3Xd6mYQhmf1ROgTLpFhogOqZP1VkCx'
 
 # Required for Chat
-TWILIO_CHAT_SERVICE_SID='xxxxx'
+TWILIO_CHAT_SERVICE_SID='IS51278db82dcf46f1b90b88977811a6cb'
